# djn

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  pyproject.toml
.agent-shell/transcripts/: 2025-12-28-15-36-02.md  2025-12-28-16-08-50.md  2025-12-29-18-07-14.md
.githooks/: pre-commit
djn/: tmux.py
ego/: .gitignore  README.md  ego  pyproject.toml
ego/src/ego/: __ego__.py  __init__.py  core.py  ifs.py  loop.py  repl.py  scratch.py
experiments/compass/planner/: index.html
experiments/day2/: AGENTS.md  CLAUDE.md  dayplanner.html
experiments/dayplanner/: chatgpt.html  chatgpt2.html  chatgpt3.html  chatgpt5.html  claude.html  claude2.html  gemini.html  gemini2.html  index.html
experiments/labbook/: CLAUDE.md  Cargo.toml  DESIGN.md
experiments/labbook/src/: artifacts.rs  config.rs  editor.rs  experiment.rs  git.rs  lib.rs  main.rs
experiments/labbook/src/commands/: add.rs  close.rs  edit.rs  init.rs  list.rs  mod.rs  open.rs  snapshot.rs  status.rs
experiments/labbook/src/view/: github.rs  main.rs  render.rs  routes.rs
experiments/labbook/templates/: base.html  compare.html  detail.html  list.html  list_partial.html
experiments/labbook/templates/partials/: diff.html
experiments/labbook/tests/e2e/: helpers.sh  test_workflow.sh
experiments/palimpsest/: Cargo.toml  claude.md  planning.md
experiments/palimpsest/.claude/: settings.json
experiments/palimpsest/src/: app.rs  git.rs  highlight.rs  main.rs  ui.rs
experiments/wezcolors/: cosmic_latte.toml
experiments/wisp1/: README.md  pyproject.toml  wisp-ui-demo.el  wisp.el
experiments/wisp1/scripts/: wisp-smoke-backend.el  wisp-smoke.el
experiments/wisp1/wisp_backend/: __init__.py  cli.py
experiments/wisp2/: pyproject.toml
experiments/wisp2/src/wisp2/: __init__.py
experiments/wisp3/: .#README.md  README.md  wisp.el
experiments/wisp3/scripts/: wisp-smoke.el
experiments/x/: Cargo.toml  DESIGN.md  README.md  build.rs  x.zsh
experiments/x/src/: cli.rs  config.rs  context.rs  executor.rs  history.rs  llm.rs  main.rs
experiments/x/tests/: integration.rs
experiments/xtrac/: trace_subprocess.py
lamp/: pyproject.toml
lamp/src/lamp/: __init__.py
lamp/tests/: test_jsonrpc_uds.py
src/: tmux.c
