[project]
name = "lamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kunal Bhalla", email = "bhalla.kunal@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.123.5",
    "httpx>=0.28.1",
    "jsonrpcserver>=5.0.9",
    "uvicorn>=0.38.0",
]

[project.scripts]
lamp = "lamp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyrefly>=0.44.0",
    "pytest>=8.4.2",
    "ruff>=0.14.7",
]
