[package]
name = "lab"
version = "0.1.0"
edition = "2021"
description = "Experiment notebook CLI for capturing snapshots alongside code repositories"

[workspace]

[[bin]]
name = "lab"
path = "src/main.rs"

[[bin]]
name = "lab-view"
path = "src/view/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# View dependencies (only used by lab-view binary)
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
askama = "0.12"
askama_axum = "0.4"
syntect = "5.2"
pulldown-cmark = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
base64 = "0.21"
open = "5"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
