[project]
name = "wisp2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kunal Bhalla", email = "bhalla.kunal@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
wisp2 = "wisp2:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
